--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: The-Mastery-of-the-Air_777
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Claxton, William J.
     gutenberg_agent_id: '409'
     url: http://www.gutenberg.org/2009/agents/409
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/777#The-Mastery-of-the-Air
 gutenberg_issued: '1997-01-01'
 gutenberg_type: Text
 identifiers:
